# esp-phone

./: .gitignore  .gitmodules  .vscode-ctags  Makefile  README.md  lv_conf.h  lv_demo_conf.h  lv_drv_conf.h
interface/: interface.c  interface.h  ui_conf.h
lvgl_phone/: lv_phone_conf.h  lvgl_phone.h
lvgl_phone/common/: common.h
lvgl_phone/gui/: gui.c  gui.h  gui_conf.h
main/: main.c  main.cpp
main/app/: app.h  app_conf.h
main/app_demo/: ui.c  ui.h  ui_events.c
phone_gui/: CMakeLists.txt
phone_gui/src/: phone_gui.cpp  phone_gui.h  phone_gui_conf.h
phone_gui/src/interface/: interface.c  interface.h  interface_conf.h
phone_gui/src/interface/app_icon_ll/: app_icon_ll.c  app_icon_ll.h  img_icon_default.c
phone_gui/src/interface/app_table/: app_table.c  app_table.h
phone_gui/src/interface/navigate_bar/: img_navigate_left.c  img_navigate_middle.c  img_navigate_right.c  navigate_bar.c  navigate_bar.h
phone_gui/src/interface/shortcut_bar/: shortcut_bar.c  shortcut_bar.h
phone_gui/src/interface/status_bar/: status_bar.c  status_bar.h  status_battery.c  status_battery.h  status_clock.c  status_clock.h  status_icon.c  status_icon.h
phone_gui/src/interface/status_bar/battery/: img_battery_1.c  img_battery_2.c
phone_gui/src/interface/status_bar/wifi/: img_wifi_1.c
phone_gui/src/interface/wallpaper/: wallpaper.c  wallpaper.h
phone_gui/src/utils/obj_conf/: obj_conf.c  obj_conf.h
results/: 1.txt  1.xls  2.txt  2022-07-01_09:10:11.csv  txt2csv.py
smart_pannel/: CMakeLists.txt  smart_pannel.c  smart_pannel.h  smart_pannel_conf.h
(+83 files in other folders)
